PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-218_erreur_express_logique_et/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:8: error: lvalue required as left operand of assignment
    3 |     &y = 15;
      |        ^

return code: 1
